# comic-drama-two

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Caddyfile  DEPLOY.md  Dockerfile  README.md  architecture_v0.1.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/outputs/: run_20260225T020058Z_b0d7fe48-04d0-4b50-aca4-62a3c31094a8.json  run_20260225T022442Z_6f7efcac-c4dc-43ce-a16f-622f88cbc905.json  run_20260227T161724Z_c4e8cd40-81b3-4e8c-b4c3-c3f3a3ac25be.json  run_20260227T162042Z_c9c76e47-8f2d-46d7-8ab8-ca38540560a0.json  run_20260228T061622Z_284561d4-c147-44d2-84c1-709be6a93536.json  run_20260228T145117Z_8f37c711-f037-4059-b6fc-e77e1f032c0a.json  run_20260228T150903Z_0f796b38-c315-486c-8676-0b408cc2a105.json  run_20260228T161856Z_91b25b17-c364-4adf-a1af-1603773d8e06.json  run_20260228T163611Z_7a91886b-1f6f-4b86-acfe-8acf95f3cffc.json  run_20260228T170237Z_513c461c-3a57-42dc-a0eb-24d106d19cb7.json  run_20260228T170955Z_199a6086-b62b-47dd-bcc7-40845ad091b8.json  run_20260228T173523Z_f9ac3815-7f40-4bc9-af81-24b1524c899b.json  run_20260301T063458Z_e595d574-f469-4152-9310-70a402a63fa7.json  runs.jsonl
backend/scripts/: export_graph_mermaid.py
backend/src/: __init__.py
backend/src/agent/: __init__.py  codebooks_v0.py  graph.py  nodes.py  prompts.py  script_data.py  state.py  ten_move.py
backend/src/api/: routes.py  schemas.py  server.py  storyboard_routes.py
backend/src/core/: celery_app.py  config.py  (+2 more)
backend/tests/: test_aigc_e2e.sh  test_retrieval.py  test_storyboard_e2e.sh
(+112 files in other folders)
